--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,23 +1,3 @@
-/*-----------------------------------------------------------------------------------
-
-    Template Name: Financio
-    Template URI: uideck.com
-    Author: Uideck
-    Author URI: https://uideck.com/
-    Support: https://uideck.com/support/
-    Version: 1.0
-
------------------------------------------------------------------------------------
-
-    CSS INDEX
-    ===================
-
-    01. Theme default CSS
-	02. Header
-    03. Hero
-	04. Footer
-
------------------------------------------------------------------------------------*/
 /*===========================
        01.COMMON css 
 ===========================*/
@@ -741,23 +721,23 @@ p {
       padding-top: 80px; } }
 
 .single_slider {
-  height: 800px;
+  height: 600px;
   position: relative;
   z-index: 5;
   border-radius: 30px;
   overflow: hidden; }
   @media only screen and (min-width: 1400px) {
     .single_slider {
-      height: 900px; } }
+      height: 650px; } }
   @media only screen and (min-width: 992px) and (max-width: 1199px) {
     .single_slider {
-      height: 650px; } }
+      height: 450px; } }
   @media only screen and (min-width: 768px) and (max-width: 991px) {
     .single_slider {
-      height: 650px; } }
+      height: 450px; } }
   @media (max-width: 767px) {
     .single_slider {
-      height: 600px; } }
+      height: 400px; } }
   .single_slider::before {
     position: absolute;
     content: '';
@@ -1434,3 +1414,5 @@ p {
     background-color: #0898E7; }
 
 /*# sourceMappingURL=style.css.map */
+.color-white {
+  color: #fff !important; }
