--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -470,7 +470,7 @@ p {
         padding: 15px 0; } }
     @media (max-width: 767px) {
       .sticky .navbar {
-        padding: 15px 0; } }
+        padding: 15px; } }
 
 .navbar {
   padding: 0;
@@ -486,7 +486,7 @@ p {
       padding: 20px 0; } }
   @media (max-width: 767px) {
     .navbar {
-      padding: 20px 0; } }
+      padding: 20px; } }
 
 .navbar-brand {
   padding: 0; }
@@ -757,7 +757,7 @@ p {
       font-size: 55px; } }
   @media (max-width: 767px) {
     .slider_content .slider_title {
-      font-size: 30px; } }
+      font-size: 20px; } }
   @media only screen and (min-width: 576px) and (max-width: 767px) {
     .slider_content .slider_title {
       font-size: 45px; } }
@@ -1425,4 +1425,29 @@ p {
   }
   .footer-logo {
     width: 65%;
+  }
+  @media (max-width: 767px) {
+    .logo {
+      position: absolute;
+      width: 35%;
+      top: 5px;
+      left: 25px;
+    }
+    .slider-h2
+    {
+      font-size: 16px;
+    }
+    .slider_content p {
+      font-size: 14px;
+    }
+    .container-fluid {
+      padding: 0 !important;
+    }
+    .single_slider{
+      border-radius: 0px;
+    }
+    .footer_wrapper
+    {
+      text-align: center;
+    }
   }
