--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1452,3 +1452,17 @@ p {
       text-align: center;
     }
   }
+  .single_slider::after{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,30%); /* black 50% */
+    z-index: 1;
+  }
+  .slider_content * {
+    position: relative;
+    z-index: 2; /* content above overlay */
+}
