--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1386,6 +1386,12 @@ p {
     border-radius: 5px;
     border: 1px solid #eceff8;
     padding: 0 25px; }
+    .footer_form .single_form textarea, .footer_form .single_form select {
+    width: 100%;
+    height: 45px;
+    border-radius: 5px;
+    border: 1px solid #eceff8;
+    padding: 0 25px; }
   .footer_form .single_form textarea {
     padding-top: 10px;
     resize: none;
@@ -1478,4 +1484,42 @@ p {
   .slider_content * {
     position: relative;
     z-index: 2; /* content above overlay */
+}
+.modal-content {
+  border-radius: 4px;
+}
+.modal-body {
+  padding: 0px;
+}
+
+.wizard{margin:0 auto;border-radius:4px;box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;overflow:hidden}
+.header{padding:22px 28px;border-bottom:1px solid #eef2f7;display:flex;align-items:center;justify-content:space-between}
+.steps{display:flex;padding: 10px 0px;background:#f1f5f9;box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;}
+.step-label{flex:1;padding:10px 12px;text-align:center;font-size:15px;}
+.content{padding:24px}
+.step{display:none}
+.step.active{display:block}
+
+.small{font-size:13px;color:var(--muted)}
+
+
+.controls{display:flex;justify-content:space-between;align-items:center;padding:16px 24px;background:#fafafa;border-top:1px solid #eef2f7}
+.btn{background:var(--accent);color:#fff;padding:10px 14px;border-radius:8px;border:none;cursor:pointer;font-weight:600}
+.btn.ghost{background:transparent;color:var(--accent);border:1px solid #dbeafe}
+.btn:disabled{opacity:.5;cursor:not-allowed}
+
+
+.summary{border:1px solid #eef2f7;padding:14px;border-radius:8px}
+.item{padding:10px 0;border-bottom:1px dashed #eef2f7}
+.item:last-child{border-bottom:none}
+
+
+.file-preview{font-size:13px;color:var(--muted);margin-top:6px}
+
+
+@media (max-width:720px){.row{flex-direction:column}}
+@media (min-width: 992px) {
+    .modal-lg, .modal-xl {
+        max-width: 1080px;
+    }
 }
