--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1596,45 +1596,54 @@ padding: 0px 10px; }
 .reveal-container.active .cover {
     transform: translateY(-100%);
 }
-
+.ws-20 {
+  width: 20% !important;
+}
+.w-25 {
+  width: 25% !important;
+}
+.m-25 
+{
+  margin-top: 25px;
+}
+.m-50 
+{
+  margin-top: 50px !important;
+}
 @media (max-width: 768px) {
-    .reveal-container {
-        height: 500px;
+    .cover {
+      display: none !important;
     }
-    
-    .content h1 {
-        font-size: 2rem;
+    .hide-on-mobile {
+      display: none !important;
     }
-    
-    .content p {
-        font-size: 1rem;
+    h1 {
+        font-size: 30px;
     }
-    
-    .cover-text {
-        font-size: 1.8rem;
-    }
-    
-    .content {
-        padding: 40px 30px;
+    .ps-40 {
+      padding: 40px 0px !important;
     }
 }
 
 @media (max-width: 480px) {
-    .reveal-container {
-        height: 400px;
+    .cover {
+      display: none !important;
     }
-    
-    .content h1 {
-        font-size: 1.5rem;
+    .hide-on-mobile {
+      display: none !important;
     }
-    
-    .cover-text {
-        font-size: 1.5rem;
+    .ws-20 {
+      width: 12% !important;
     }
-    
-    .content {
-        padding: 30px 20px;
+    h1 {
+      font-size: 25px;
+  }
+  .ps-40 {
+      padding: 40px 0px !important;
     }
+    .mt-50 {
+    margin-top: 10px;
+}
 }
 
 .item-bubble {
@@ -1653,18 +1662,4 @@ padding: 0px 10px; }
     font-size: 17px;
     line-height: 20px;
     text-align: justify;
-}
-.w-20 {
-  width: 20% !important;
-}
-.w-25 {
-  width: 25% !important;
-}
-.m-25 
-{
-  margin-top: 25px;
-}
-.m-50 
-{
-  margin-top: 50px !important;
 }
