--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1707,11 +1707,61 @@ padding: 0px 10px; }
     background: rgba(0, 0, 0, 0.8);
 }
 
+.how-hero-section {
+  margin-top: 80px;
+    position: relative;
+    width: 100%;
+    height: 600px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 25px;
+}
+.how-hero-section::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: rgb(0 0 0 / 70%);;
+}
+.how-hero-content {
+    position: relative;
+    z-index: 2;
+    color: #ffffff;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 20px;
+}
+.video-section {
+    padding: 10px 20px;
+}
+
+.video-container {
+    max-width: 1000px;
+    margin: 0 auto;
+    position: relative;
+    padding-bottom: 40.25%;
+    height: 0;
+    border: 1px solid #a574c7;
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
 /* Mobile optimization */
 @media (max-width: 768px) {
     .slick-arrow {
         width: 40px;
         height: 40px;
+    }
+    .how-hero-section {
+        height: 350px;
     }
 }
 @media (max-width: 768px) {
