--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -524,10 +524,11 @@ p {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .navbar-collapse {
     position: absolute;
+    padding: 20px !important;
     top: 100%;
     left: 0;
     width: 100%;
-    background-color: #fff;
+    background-color: #080216;
     z-index: 9;
     -webkit-box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.1);
@@ -536,10 +537,11 @@ p {
 @media (max-width: 767px) {
   .navbar-collapse {
     position: absolute;
+    padding: 30px !important;
     top: 100%;
     left: 0;
     width: 100%;
-    background-color: #fff;
+    background-color: #080216;
     z-index: 9;
     -webkit-box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.1);
     -moz-box-shadow: 0px 15px 20px 0px rgba(0, 0, 0, 0.1);
@@ -1199,7 +1201,7 @@ padding: 0px 10px; }
   position: relative;
   margin-top: 20px;
   margin-bottom: 30px;
-  min-width: 350px !important;
+  max-width: 350px !important;
   min-height: 550px !important;
  }
   .single_testimonial .testimonial_author {
@@ -1449,6 +1451,7 @@ padding: 0px 10px; }
       width: 35%;
       top: 5px;
       left: 25px;
+      z-index: 10;
     }
     .slider-h2
     {
@@ -1732,14 +1735,13 @@ padding: 0px 10px; }
     flex-direction: column;
     justify-content: center;
     padding: 0 20px;
+    align-items: center;
 }
 .video-section {
     padding: 10px 20px;
 }
 
 .video-container {
-    max-width: 1000px;
-    margin: 0 auto;
     position: relative;
     padding-bottom: 40.25%;
     height: 0;
@@ -1754,11 +1756,28 @@ padding: 0px 10px; }
     height: 100%;
     border-radius: 10px;
 }
+.wd-65 {
+  width: 65% !important;
+}
+.play-icon {
+    margin-top: 30px;
+    border-radius: 4px;
+    border: 1px solid #a272c4;
+    background-color: #00000094;
+    width: 6%;
+}
+@media (min-width: 992px) {
+    .video-container {
+        max-width: 1000px;
+        margin: 0 auto;
+    }
+}
 /* Mobile optimization */
 @media (max-width: 768px) {
     .slick-arrow {
         width: 40px;
         height: 40px;
+        display: none !important;
     }
     .how-hero-section {
         height: 350px;
